--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 body {
-
-  /* background: #F2F2FA; */
-  background:linear-gradient(273deg, #68c7f6, #cf72ffe0);
+  background:linear-gradient(273deg, #EDA43E, #f3b257da);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
